tests/sawn/fixtures/invalid/35_space_before_array_suffix.sawn
// §3: Space between key and [] is a parse error
items []
  1
  2
